用户基本信息展示

--- a/app/views/shared/admin_lte/_user_menu.html.erb
+++ b/app/views/shared/admin_lte/_user_menu.html.erb
@@ -5,7 +5,7 @@
     <!-- The user image in the navbar-->
     <%= image_tag('user_jenny', class: 'user-image') %>
     <!-- hidden-xs hides the username on small devices so only the image appears. -->
-    <span class="hidden-xs">Alexander Pierce</span>
+    <span class="hidden-xs"><%= render_user_name %></span>
   </a>
   <ul class="dropdown-menu">
     <!-- The user image in the menu -->
@@ -13,7 +13,7 @@
       <%= image_tag('user_jenny', class: 'img-circle') %>
 
       <p>
-        Alexander Pierce - Web Developer
+        <%= render_user_name %>
         <small>Member since Nov. 2012</small>
       </p>
     </li>
@@ -38,7 +38,7 @@
         <a href="#" class="btn btn-default btn-flat">Profile</a>
       </div>
       <div class="pull-right">
-        <a href="#" class="btn btn-default btn-flat">Sign out</a>
+        <%= render_user_sign_out %>
       </div>
     </li>
   </ul>
