--- a/app/views/shared/admin_lte/_user_panel.html.erb
+++ b/app/views/shared/admin_lte/_user_panel.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag('user_jenny', class: 'img-circle') %>
   </div>
   <div class="pull-left info">
-    <p>Alexander Pierce</p>
+    <p><%= render_user_name %></p>
     <!-- Status -->
     <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
   </div>
