--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -198,7 +198,7 @@ desired effect
 </div>
 <!-- ./wrapper -->
 
-
+<%= render 'shared/admin_lte/common_modal' %>
 <%= javascript_include_tag 'application' %>
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
