导航菜单管理

--- a/app/views/shared/admin_lte/_sidebar_menu.html.erb
+++ b/app/views/shared/admin_lte/_sidebar_menu.html.erb
@@ -2,6 +2,14 @@
 <ul class="sidebar-menu">
   <li class="header">HEADER</li>
   <!-- Optionally, you can add icons to the links -->
+  <%- Node.published.send("with_domain", params[:controller].split('/').first).each do |node| %>
+    <li>
+      <%= link_to node.name, url: node.uri do %>
+        <i class="fa <%= node.icon %>"></i>
+        <span><%= node.name%></span>
+      <% end %>
+    </li>
+  <% end %>
   <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
   <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
   <li class="treeview">
