修复模板图片地址

--- a/app/views/shared/admin_lte/_messages_menu.html.erb
+++ b/app/views/shared/admin_lte/_messages_menu.html.erb
@@ -14,7 +14,7 @@
           <a href="#">
             <div class="pull-left">
               <!-- User Image -->
-              <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <%= image_tag('user_jenny', class: 'img-circle') %>
             </div>
             <!-- Message title and timestamp -->
             <h4>
