--- a/app/views/song/labors/_show.html.slim
+++ b/app/views/song/labors/_show.html.slim
@@ -26,7 +26,7 @@ br
 .row
   .col-md-2 期望薪资:
   .col-md-10 
-    = @labor.intention.salary
+    = @labor.intention.salary_text
 br
 .row
   .col-md-2 期望职位:
