--- a/app/views/zhao/companies/create.js.erb
+++ b/app/views/zhao/companies/create.js.erb
@@ -2,6 +2,7 @@
   $('#common_modal #common-errors').remove();
   $('#common_modal .modal-body').prepend("<%= j( render partial: 'shared/common_errors', locals: { model: @company } ) %>");
 <% else %>
-  $('#common_modal').modal('hide');
+  $('.company_select').html("<%= j(select_tag 'job[company_id]', options_from_collection_for_select(current_user_zhao.companies, :id, :name), { include_blank: true, class: 'form-control' })%>")
   $('tbody tr:first').after("<%= j(render @company) %>");
+  $('#common_modal').modal('hide');
 <% end %>
