--- a/app/views/zhao/jobs/_form.html.slim
+++ b/app/views/zhao/jobs/_form.html.slim
@@ -1,47 +1,79 @@
 - if @job.errors.any?
-  = render partial: 'shared/errors', locals: { model: @job }
+  = render partial: 'shared/common_errors', locals: { model: @job }
 
-= form_for [:zhao, @job], remote: true do |f|
+= form_for [:zhao, @job] do |f|
   .form-group
     .row
-      .col-xs-4.col-md-6
+      .col-xs-4
         = f.label :name
         = f.text_field :name, class: 'form-control'
 
   .form-group
     .row
-      .col-xs-4.col-md-6
+      .col-xs-4
         = f.label :position
         = f.select :position_id, nested_set_options(Position, @position) {|i| "#{'-' * i.level} #{i.name}" },
           { include_blank: true }, class: 'form-control'
 
   .form-group
-    = f.collection_radio_buttons :gender, Job.gender.options, :last, :first do |r|
-      .radio-inline
-        = r.radio_button
-        = r.label
+    .row
+      .col-xs-4
+        = f.label :gender
+    .row
+      .col-xs-4
+        = f.collection_radio_buttons :gender, Job.gender.options, :last, :first do |r|
+          .radio-inline
+            = r.radio_button
+            = r.label
 
   .form-group
     .row
-      .col-xs-2.col-md-3
-        = f.label :age_min
+      .col-xs-2
+        = f.label :age_min, t('.age')
     .row
-      .col-xs-2.col-md-3
+      .col-xs-2
         = f.text_field :age_min, class: 'form-control'
-      .col-xs-2.col-md-3
+      .col-xs-2
         = f.text_field :age_max, class: 'form-control'
 
   .form-group
     .row
-      .col-xs-2.col-md-3
-        = f.label :salary_min
-        = f.text_field :salary_min, class: 'form-control'
-      .col-xs-2.col-md-3
-        = f.label :salary_max
-        = f.text_field :salary_max, class: 'form-control'
-      .col-xs-2.col-md-3
+      .col-xs-2
+        = f.label :salary_min, t('.salary')
+      .col-xs-2
+      .col-xs-2
         = f.label :salary_basic
+    .row
+      .col-xs-2
+        = f.text_field :salary_min, class: 'form-control'
+      .col-xs-2
+        = f.text_field :salary_max, class: 'form-control'
+      .col-xs-2
         = f.text_field :salary_basic, class: 'form-control'
 
   .form-group
-    = f.submit class: 'btn btn-primary'
+    .row
+      .col-xs-4
+        = f.label :company_id
+    .row
+      .col-xs-4.company_select
+        = f.select :company_id, options_for_select(current_user_zhao.companies.collect { |c| [c.name, c.id] }, @job.company_id),
+          { include_blank: true }, class: 'form-control'
+      .col-xs-2
+        = link_to t('.new_company'), new_zhao_company_path, remote: true, class: 'btn btn-primary form-control'
+
+  .form-group
+    .row
+      .col-xs-4
+        = f.label :contact_id
+    .row
+      .col-xs-4.contact_select
+        = f.select :contact_id, options_for_select(current_user_zhao.contacts.collect {|c| [c.name, c.id]}, @job.contact_id),
+          { include_blank: true }, class: 'form-control'
+      .col-xs-2
+        = link_to t('.new_contact'), new_zhao_contact_path, remote: true, class: 'btn btn-primary form-control'
+
+  .form-group
+    .row
+      .col-xs-2
+        = f.submit class: 'btn btn-primary form-control'
