--- a/app/views/os/cash_ins/index.html.slim
+++ b/app/views/os/cash_ins/index.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-xs-12
-    = link_to t('.new_cash_in'), new_os_cash_in_path, class: 'btn btn-primary'
+    = link_to t('.new_cash_in'), new_os_cash_in_path, remote: true, class: 'btn btn-primary'
 
 .row
   .col-xs-12
