--- a/app/views/os/cash_ins/_cash_in.html.slim
+++ b/app/views/os/cash_ins/_cash_in.html.slim
@@ -5,14 +5,14 @@ tr id="cash_in-#{cash_in.id}"
   td = cash_in.note
   td
     .btn-group
-      = link_to t('.show'), [:os, cash_in], class: 'btn btn-primary'
+      = link_to t('.show'), [:os, cash_in], class: 'btn btn-primary', remote: true
 
       button.btn.btn-primary.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button"
         span.caret
         span.sr-only Toggle Dropdown
       ul.dropdown-menu
         li
-          = link_to t('.Edit'), edit_os_cash_in_path(cash_in)
+          = link_to t('.Edit'), edit_os_cash_in_path(cash_in), remote: true
         li
           = link_to t('.Destroy'), [:os, cash_in],
             data: {:confirm => 'Are you sure?'}, :method => :delete
