--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -203,5 +203,6 @@ desired effect
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
      fixed layout. -->
+<%= yield :js %>
 </body>
 </html>
