--- a/app/views/common/profiles/show.html.slim
+++ b/app/views/common/profiles/show.html.slim
@@ -22,6 +22,6 @@
         .box-header.with-bower
           h3.box-title 财务管理
         .box-body
-          a.btn.btn-primary.btn-block href="#" 绑定银行卡
+          a.btn.btn-primary.btn-block href=new_debit_path 绑定银行卡
           a.btn.btn-primary.btn-block href="#" 充值
           a.btn.btn-primary.btn-block href="#" 提现
