--- a/app/views/admin/cash_outs/index.html.slim
+++ b/app/views/admin/cash_outs/index.html.slim
@@ -1,8 +1,5 @@
 .row
   .col-xs-12
-    = link_to t('.cash_out_company'), new_cash_out_path, remote: true, class: 'btn btn-primary'
-.row
-  .col-xs-12
     .box
       .box-header
         h3.box-title = CashOut.model_name.human
@@ -12,9 +9,9 @@
         table.table.table-hover
           tbody
             tr
+              th = CashOut.human_attribute_name(:name)
+              th = CashOut.human_attribute_name(:mobile)
               th = CashOut.human_attribute_name(:amount)
-              th = CashOut.human_attribute_name(:serial_inner)
-              th = CashOut.human_attribute_name(:serial_outer)
               th = CashOut.human_attribute_name(:state)
               th = t ('.options')
             = render @cash_outs
