--- a/app/assets/stylesheets/job-page.scss
+++ b/app/assets/stylesheets/job-page.scss
@@ -1,4 +1,4 @@
-#recommend_jobs-page{
+#hot-jobs-page{
   background: #eeeff0;
 }
 
@@ -18,7 +18,7 @@
       background: #37b97d;
     }
 
-    .recommend-job-slides {
+    .recommend-jobs-slides {
       position: relative;
       padding: 20px 10px;
       height: 180px;
