--- a/app/assets/stylesheets/site-header.scss
+++ b/app/assets/stylesheets/site-header.scss
@@ -1,68 +1,182 @@
-.site-header {
-  height: 60px;
-  border: none;
-  padding: 0 20px;
-  background-color: #fff;
-  color: #999;
-  .navbar-header {
-    height: 60px;
-    line-height: 50px;
-    padding: 5px 10px;
-    color: #fff;
-    transition: all .3s ease;
-  }
-  .header-title {
-    float: left;
-    height: 60px;
-    line-height: 60px;
-    font-size: 22px;
-    color: #616161;
-  }
-  .navbar-user {
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    right: 20px;
-
-    .user-nav {
-      float: right;
-
-      li {
-        float: left;
-        height: 60px;
-
+header {
+  #top-nav {
+    margin: 0;
+    background-color: #393939;
+    color: #E7E7E7;
+    .navbar-header {
+      height: 50px;
+      line-height: 50px;
+      color: #DBDBAE;
+      .call-us {
+        font-size: 18px;
+      }
+    }
+    li {
+      &:hover {
         a {
-          padding: 20px 15px;
-          color: #000;
-          transition: all .3s ease;
+          color: #fff;
         }
       }
     }
-
-    .navbar-form {
-      margin: 15px 10px;
-
-      .form-control {
-        height: 30px;
-        width: 100px;
-        line-height: 28px;
-        border-radius: 20px;
-        padding: 0 12px;
+    a {
+      font-size: 16px;
+      i {
+        font-size: 16px
       }
-      .form-group {
-        position: relative;
+    }
+  }
+  .navbar-header {
+    margin-right: 20px !important;
+  }
+  .navbar-default {
+    background: #fff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: none;
+    li.active {
+      a {
+        background-color: #fff !important;
+        color: #ffa900 !important;
+      }
+    }
+    .form-search {
+      font-size: 14px;
+      position: relative;
+      margin-top: 10px;
+      margin-right: 10px;
 
-        .search-icon {
-          position: absolute;
-          right: 12px;
-          top: 8px;
-          border: none;
-          background: none;
+      #toggle-search {
+        display: none;
+      }
+      .btn-search {
+        position: absolute;
+        transition: all .3s ease-in-out;
+        right: -5px;
+        top: 10px;
+        &:hover {
+          cursor: pointer;
         }
+      }
+      .search-input {
+        max-width: 0;
+        display: none;
+        overflow: hidden;
+        border: none;
+        transition: all 0.3s ease-in-out;
+      }
+      #toggle-search:checked~.search-input {
+        display: block;
+        max-width: 100%;
+      }
+      #toggle-search:checked~.btn-search {
+        transform: translate(-162px,0);
       }
     }
   }
 
+}
+.category-menu {
+  #c-menu {
+    display: none;
+  }
+  #c-menu:checked~.category-list {
+    display: block;
+  }
+  label {
+    font-weight: normal;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .category-list {
+    display: none;
+    width: 200px;
+    padding: 0;
+    position: absolute;
+    z-index: 2;
+    .category-item {
+      width: 100%;
+      position: relative;
+      display: block;
+      padding-left: 10px;
+      background: #E5AC41;
+      border-bottom: 1px solid #E5AC41;
 
 
+
+      h2 {
+        margin: 0;
+        line-height: 30px;
+        font-size: 16px;
+        a {
+          color: #fff;
+        }
+        span {
+          color: #fff;
+        }
+        .fr {
+          float: right;
+          margin-right: 14px;
+          font-size: 15px;
+          line-height: 30px;
+        }
+      }
+
+      ul {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+
+        li {
+          line-height: 30px;
+          font-size: 14px;
+          float: left;
+          margin: 0 5px;
+
+          a {
+            color: #fff;
+          }
+        }
+      }
+      .second {
+        display: none;
+        position: absolute;
+        top: 0;
+        right: -350px;
+        width: 350px;
+        background: #fff;
+        z-index: 2;
+        border: 3px solid #E5AC41;
+
+        dl {
+          overflow: hidden;
+          margin: 0;
+
+          dt {
+            float: left;
+            width: 100px;
+            line-height: 25px;
+            font-weight: bold;
+            a {
+              color: #000;
+            }
+          }
+
+          dd {
+            a {
+              display: inline;
+              float: left;
+              padding: 0 10px;
+              line-height: 25px;
+            }
+          }
+        }
+      }
+      &:hover {
+        .second {
+          display: block;
+        }
+      }
+    }
+  }
 }
