--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,218 +2,73 @@ a {
   color: #37b97d;
   text-decoration: none;
 }
-.index-course-header {
-  .header-line {
-    overflow: hidden;
-    margin-bottom: 10px;
-    border-bottom: 1px solid #aeaeae;
-    a {
-      color: #333;
-    }
+.hot-job-list {
+  border-top: 1px solid #eee;
+  .job-cards {
+    .job-card-item {
+      box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+      background-color: #fff;
+      padding: 10px;
+      margin-bottom: 30px;
+      transition: all .3s ease;
 
-    h2 {
-      display: inline-block;
-      margin: 0;
-      margin-bottom: 1px;
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    ul {
-      display: inline-block;
-
-      li {
-        display: inline-block;
-        padding: 0 5px;
+      &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(0,0,0,0.1),0 6px 6px rgba(0,0,0,0.2);
       }
-    }
-  }
-}
-.course-item {
-  position: relative;
-  z-index: 1;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-  background-color: #fff;
-  transition: all .3s ease;
 
-  .course-img {
-    position: relative;
-    overflow: hidden;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-
-    .img-responsive {
-      width: 100%;
-    }
-  }
-
-  .course-body {
-    overflow: hidden;
-    padding: 0 10px;
-
-    .title {
-      margin: 10px auto;
-      display: block;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      word-wrap: normal;
-
-      .link-dark {
-        color: #212121;
-        font-size: 14px;
-      }
-    }
-
-    p {
-      margin-top: 5px;
-      margin-bottom: 0;
-      color: #999;
-      display: flex;
-
-      span {
-        margin-right: 5px;
-
-        .price {
-          margin-right: 10px;
-          padding-right: 10px;
-          border-right: 1px solid #999;
-          color: #e85308;
+      .job-card-body {
+        i {
+          font-size: 20px;
+        }
+        .salary {
+          border-bottom: 1px solid #eee;
+          .salary-range {
+            color: #f4983b;
+          }
+          span {
+            height: 50px;
+            line-height: 50px;
+            padding: 5px;
+          }
+        }
+        .job-name {
+          height: 100px;
+          line-height: 100px;
+          font: 20px;
         }
       }
     }
   }
-  &:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1),0 6px 6px rgba(0,0,0,0.2);
-    transition: all .3s ease;
+  .index-job-header {
+    text-align: center;
+    padding: 15px 0;
+    ul {
+      width: 320px;
+      margin: 0 auto;
+      text-align:left;
+      li {
+        list-style: none;
+        margin-left: 20px;
+        float: left;
+        a {
+          padding-bottom: 5px;
+          color: #333;
+        }
+      }
+      li.active {
+        a {
+          border-bottom: 3px solid #f49828;
+        }
+      }
+    }
   }
 }
 
-.job-item {
-  position: relative;
-  margin: 10px auto;
-  text-align: center;
-  z-index: 1;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-  transition: all .3s ease;
-
-  a {
-    color: #37b97d;
-    text-decoration: none;
-    background-color: transparent;
-  }
-
-  .job-top {
-    padding: 20px 10px;
-    background-color: #fafafa;
-
-    .job-avatar {
-      border: 4px solid #fff;
-      border-radius: 50%;
-      margin-left: 50px;
-      width: 128px;
-      height: 128px;
-    }
-
-    .title {
-      height: 22px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      word-wrap: normal;
-
-      .position {
-        color: #9e9e9e;
-      }
-    }
-  }
-
-  .job-bottom {
-    position: relative;
-    height: 90px;
-
-    .about {
-      top: 20px;
-      line-height: 25px;
-      overflow: hidden;
-      color: #9e9e9e;
-      opacity: 1;
-    }
-
-    .metas {
-      position: absolute;
-      left: 60px;
-      top: 30px;
-      bottom: 30px;
-      opacity: 0;
-      transition: all .3s ease;
-
-      .btn {
-        margin: 0 15px;
-        border-radius: 16px;
-      }
-      .btn-primary {
-        border-color: #37b97d;
-        background: #37b97d;
-        color: #fff;
-      }
-    }
-  }
-  &:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1),0 6px 6px rgba(0,0,0,0.2);
-    transition: all .3s ease;
-    .about {
-      opacity: 0;
-      transition:all .3s ease;
-    }
-    .metas {
-      opacity: 1;
-      transition:all .3s ease;
-    }
-  }
-}
 
 .information {
   padding-bottom: 50px;
   background: #fff;
-
-  .text-line {
-    position: relative;
-    padding: 50px 0;
-
-    h3 {
-      position: relative;
-      text-align: center;
-      font-size: 28px;
-      z-index: 1;
-    }
-
-    .line {
-      position: absolute;
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background: #f0f0f0;
-      margin-top: -1px;
-    }
-
-    .more {
-      position: absolute;
-      bottom: 15px;
-      left: 50%;
-      margin-left: -20px;
-      width: 40px;
-      text-align: center;
-      color: #9e9e9e;
-      transition: all .3s ease;
-    }
-  }
 
   .top {
     overflow: hidden;
@@ -282,6 +137,58 @@ a {
     a {
       float: right;
       color: #ff9e40;
+    }
+  }
+}
+
+.recommend-company {
+  background: #f7f7f7;
+  .recommend-companies-header {
+    text-align: center;
+    padding-bottom: 10px;
+    div {
+      color: #E5AC41;
+    }
+  }
+  .company-card-item {
+    padding: 8px;
+    text-align: center;
+    background: #fff;
+    transition: all .3s ease;
+
+    a {
+      color: #37b97d;
+      text-decoration: none;
+      background-color: transparent;
+    }
+    .company-avatar {
+      width: 100%;
+      height: 200px;
+    }
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1),0 6px 6px rgba(0,0,0,0.2);
+    }
+  }
+}
+
+.unicorn-companies {
+  text-align: center;
+  .what-we-do {
+    padding: 40px 0;
+    background: #ffaf00;
+    span {
+      font-size: 20px;
+      color: #333;
+    }
+    .join-us {
+      background: #393939;
+      padding: 5px 25px;
+      color: #fff;
+      font-size: 15px;
+      margin-left: 20px;
+      border: none;
+      border-radius: 3px;
     }
   }
 }
