--- a/app/assets/stylesheets/site-footer.scss
+++ b/app/assets/stylesheets/site-footer.scss
@@ -1,31 +1,37 @@
 .site-footer {
-  .copyright {
-    background: #212121;
-    border-top: 1px solid #444;
-    text-align: center;
-    padding: 20px 0;
-    line-height: 30px;
-    color: #b1b1b1;
-    text-shadow: 0 1px 3px #000;
-
+  padding-top: 25px;
+  background: #3d3d3d;
+  color: #c3c3c3;
+  li {
+    list-style: none;
     a {
-      color: #eee;
+      color: #c3c3c3;
     }
   }
-
-  .site-footer-links {
-    list-style: none;
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-
+  ul.list-group {
+    float: left;
+    margin-right: 100px;
+    li:first-child {
+      font-size: 18px;
+    }
     li {
-      display: inline-block;
-      margin-right: 20px;
-
-      a {
-        color: #eee;
+      padding: 6px;
+      .fa-inverse {
+        color: #3d3d3d;
       }
     }
+    .social-icons {
+      padding-left: 0;
+      span {
+        margin-right: 9px;
+      }
+    }
+    .join-us {
+      color: #e1a51f;
+    }
+  }
+  .copyright {
+    padding-top: 15px;
+    border-top: 1px solid #565656;
   }
 }
