--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,41 @@
 <footer class="site-footer">
-  <div class="copyright">
-    <div class="container">
-      <div class="footer-links">
-        <ul class="site-footer-links">
-          <li><a href="/page/aboutus" target="_blank">关于我们</a></li>
-          <li><a href="/page/contactus" target="_blank">联系我们</a></li>
-        </ul>
-      </div>
-      Powered by <a href="http://www.leyikao.cn" target="_blank">上海益服科技集团 </a>
-    </div>
+  <div class="container clearfix">
+    <ul class="list-group">
+      <li><a href="/page/aboutus" target="_blank">关于我们</a></li>
+      <li><a href="/page/aboutus" target="_blank">淘帮忙简介</a></li>
+      <li><a href="/page/aboutus" target="_blank">业务咨询</a></li>
+      <li><a href="/page/aboutus" target="_blank">法律声明</a></li>
+      <li><a href="/page/contactus" target="_blank">服务协议</a></li>
+    </ul>
+    <ul class="list-group">
+      <li><a href="/page/aboutus" target="_blank">加盟合作</a></li>
+      <li><a href="/page/aboutus" target="_blank">商务合作</a></li>
+      <li><a href="/page/aboutus" target="_blank">网站联盟</a></li>
+      <li><a href="/page/aboutus" target="_blank">友情链接</a></li>
+      <li><a href="/page/contactus" target="_blank">业务资质</a></li>
+    </ul>
+    <ul class="list-group">
+      <li><a href="/page/aboutus" target="_blank">联系我们</a></li>
+      <li><a href="/page/aboutus" target="_blank">投诉建议</a></li>
+      <li><a href="/page/aboutus" target="_blank" class="join-us">加入淘帮忙</a></li>
+    </ul>
+    <ul class="list-group pull-right">
+      <li><span>关注我们</span></li>
+      <li><span>联系电话：400－123－1111</span></li>
+      <li><span>工作时间：9:00 － 18:00</span></li>
+      <li class="social-icons">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+        </span>
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-tencent-weibo fa-stack-1x fa-inverse"></i>
+        </span>
+      </li>
+    </ul>
+  </div>
+  <div class="container copyright">
+    &copy; 2015 淘帮忙版权所有
   </div>
 </footer>
