--- a/app/views/layouts/_site_header.html.erb
+++ b/app/views/layouts/_site_header.html.erb
@@ -1,22 +1,73 @@
-<header class="site-header navbar ">
-  <div class="navbar-header">
-    <%= image_tag "site-logo.png" %></h1>
-  </div>
-  <div class="header-title">
-    就创业优选好课
-  </div>
-  <nav class="collapse navbar-collapse">
-    <div class="navbar-user">
-      <ul class="nav user-nav">
-        <li class="hidden-xs"><a href="/login?goto=%2F">登录</a></li>
-        <li class="hidden-xs"><a href="/register?goto=%2F">注册</a></li>
+<header>
+  <nav id="top-nav" class="navbar navbar-static-top navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <p>
+          欢迎致电：<span class="call-us">400－123－1111</span>
+        </p>
+      </div>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="＃">我是HR</a></li>
+        <li><a href="＃">我是中介</a></li>
+        <li><a href="＃">手机端 <i class="fa fa-mobile"></i> </a></li>
+        <li><a href="＃">帮助中心</a></li>
       </ul>
-      <form class="navbar-form navbar-right hidden-xs hidden-sm" action="/search" method="get">
-        <div class="form-group">
-          <input class="form-control js-search" name="q" placeholder="搜索">
-          <i class="fa fa-search search-icon"></i>
-        </div>
-      </form>
+    </div>
+  </nav>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">首页</a></li>
+        <li class="category-menu">
+          <input type="checkbox" id="c-menu"></input>
+          <a href="#">
+            <label for="c-menu">所有职位</label>
+          </a>
+          <div class="category-list">
+            <% Position.where(parent_id: nil).each do |position| %>
+            <div class="category-item">
+              <h2>
+                <a class="first" href="/explore-jrck01_01/" target="_blank" title=""><%= position.name %></a>
+                <span class="glyphicon glyphicon-menu-right fr"></span>
+              </h2>
+              <ul>
+              </ul>
+              <div class="second">
+                <dl>
+                  <dd>
+                    <% position.children.each do |child| %>
+                    <a href="/explore-jrck01_01/ck1001_02/kjcyzg100101_03/" target="_blank" title=""><%= child.name %></a>
+                    <% end %>
+                  </dd>
+                </dl>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </li>
+        <li><a href="＃">我要招聘</a></li>
+        <li><a href="＃">我要送人</a></li>
+        <li><a href="＃">关于我们</a></li>
+        <li><a href="＃">联系我们</a></li>
+      </ul>
+      <ul class="nav user-bar navbar-nav navbar-right">
+        <li><a href="#">登录</a></li>
+        <li><a href="#">注册</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-search hidden-xs">
+          <form class="navbar-form form-search" action="/search" method="GET">
+            <div class="form-group">
+              <input type="checkbox" id="toggle-search"></input>
+              <input class="form-control search-input" autofocus=true name="q" type="text" value="" placeholder="搜索本站内容">
+              <label for="toggle-search" class="fa btn-search fa-search"></label>
+            </div>
+          </form>
+        </li>
+      </ul>
     </div>
   </nav>
 </header>
