--- a/app/views/zhao/jobs/_form.html.slim
+++ b/app/views/zhao/jobs/_form.html.slim
@@ -1,79 +1,200 @@
 - if @job.errors.any?
   = render partial: 'shared/common_errors', locals: { model: @job }
 
-= form_for [:zhao, @job] do |f|
-  .form-group
-    .row
-      .col-xs-4
-        = f.label :name
-        = f.text_field :name, class: 'form-control'
+= nested_form_for [:zhao, @job] do |f|
+  .row
+    .col-xs-9
+      .panel.panel-default
+        .panel-body
+
+          .form-group
+            .row
+              .col-xs-6
+                = f.label :name
+                = f.text_field :name, class: 'form-control'
+
+          .form-group
+            .row
+              .col-xs-6
+                = f.label :position
+                = f.select :position_id, nested_set_options(Position, @position) {|i| "#{'-' * i.level} #{i.name}" },
+                  { include_blank: true }, class: 'form-control'
+
+          .form-group
+            .row
+              .col-xs-5
+                = f.label :gender
+            .row
+              .col-xs-5
+                = f.collection_radio_buttons :gender, Job.gender.options, :last, :first do |r|
+                  .radio-inline
+                    = r.radio_button
+                    = r.label
+
+          .form-group
+            .row
+              .col-xs-3
+                = f.label :age_min, t('.age')
+            .row
+              .col-xs-3
+                = f.text_field :age_min, class: 'form-control'
+              .col-xs-3
+                = f.text_field :age_max, class: 'form-control'
+
+          .form-group
+            .row
+              .col-xs-3
+                = f.label :salary_min, t('.salary')
+              .col-xs-3
+              .col-xs-3
+                = f.label :salary_basic
+            .row
+              .col-xs-3
+                = f.text_field :salary_min, class: 'form-control'
+              .col-xs-3
+                = f.text_field :salary_max, class: 'form-control'
+              .col-xs-3
+                = f.text_field :salary_basic, class: 'form-control'
+
+          .form-group
+            .row
+              .col-xs-6
+                = f.label :company_id
+            .row
+              .col-xs-6.company_select
+                = f.select :company_id, options_for_select(current_enterprise.companies.collect { |c| [c.name, c.id] }, @job.company_id),
+                  { include_blank: true }, class: 'form-control'
+              .col-xs-3
+                = link_to t('.new_company'), new_zhao_company_path, remote: true, class: 'btn btn-primary form-control'
+
+          .form-group
+            .row
+              .col-xs-6
+                = f.label :contact_id
+            .row
+              .col-xs-6.contact_select
+                = f.select :contact_id, options_for_select(current_enterprise.contacts.collect {|c| [c.name, c.id]}, @job.contact_id),
+                  { include_blank: true }, class: 'form-control'
+              .col-xs-3
+                = link_to t('.new_contact'), new_zhao_contact_path, remote: true, class: 'btn btn-primary form-control'
 
   .form-group
     .row
-      .col-xs-4
-        = f.label :position
-        = f.select :position_id, nested_set_options(Position, @position) {|i| "#{'-' * i.level} #{i.name}" },
-          { include_blank: true }, class: 'form-control'
+      .col-md-9
+        .panel.panel-default
+          .panel-body
+            /! Nav tabs
+            ul.nav.nav-tabs.nav-justified role="tablist"
+              li#management.fee_type role="presentation"
+                a aria-controls="profile" data-toggle="tab" href="#profile" role="tab"
+                  = t('.management')
+              li#recruitment.fee_type role="presentation"
+                a aria-controls="messages" data-toggle="tab" href="#messages" role="tab"
+                  = t('.recruitment')
+              li#both.fee_type.active role="presentation"
+                a aria-controls="home" data-toggle="tab" href=".tab-pane" role="tab"
+                  = t('.both')
 
-  .form-group
-    .row
-      .col-xs-4
-        = f.label :gender
-    .row
-      .col-xs-4
-        = f.collection_radio_buttons :gender, Job.gender.options, :last, :first do |r|
-          .radio-inline
-            = r.radio_button
-            = r.label
+            /! Tab panes
+            .tab-content
+              / #home.tab-pane.active role="tabpanel"
+              #profile.active.tab-pane.management_field role="tabpanel"
+                h1.page-header
+                  small
+                    = t('.management_fee')
+                = render partial: 'management_fee', locals: { f: f }
+                br
+              #messages.active.tab-pane.recruitment_field role="tabpanel"
+                h1.page-header
+                  small
+                    = t('.recruitment_fee')
+                .male_field
+                  = render partial: 'male_fee', locals: { f: f, gender: 'male' }
+                  = f.link_to_add :male_fees do
+                    span.glyphicon.glyphicon-plus aria-hidden="true"
 
-  .form-group
-    .row
-      .col-xs-2
-        = f.label :age_min, t('.age')
-    .row
-      .col-xs-2
-        = f.text_field :age_min, class: 'form-control'
-      .col-xs-2
-        = f.text_field :age_max, class: 'form-control'
+                .female_field
+                  h1.page-header
+                  = render partial: 'female_fee', locals: { f: f, gender: 'female' }
+                  = f.link_to_add :female_fees do
+                    span.glyphicon.glyphicon-plus aria-hidden="true"
+                br
+  /
+    .form-group
+      .row
+        .col-md-5
+          label class="radio-inline"
+            = f.radio_button :fee_type, 'management'
+            span = t('.management')
+          label class="radio-inline"
+            = f.radio_button :fee_type, 'recruitment'
+            span = t('.recruitment')
+          label class="radio-inline"
+            = f.radio_button :fee_type, 'both'
+            span = t('.both')
 
-  .form-group
-    .row
-      .col-xs-2
-        = f.label :salary_min, t('.salary')
-      .col-xs-2
-      .col-xs-2
-        = f.label :salary_basic
-    .row
-      .col-xs-2
-        = f.text_field :salary_min, class: 'form-control'
-      .col-xs-2
-        = f.text_field :salary_max, class: 'form-control'
-      .col-xs-2
-        = f.text_field :salary_basic, class: 'form-control'
+    .management_field
+      .form-group
+        .row
+          .col-md-9
+            .panel.panel-default
+              .panel-body
+                .row
+                  = render partial: 'management_fee', locals: { f: f }
+                  = render partial: 'male_fee', locals: { f: f, gender: 'male' }
+                  = render partial: 'female_fee', locals: { f: f, gender: 'female' }
+              .panel-footer
+                small
+                  span
+                    span 在
+                    span
+                      strong
+                        mark#management_fee_months __
+                    span 个月中，每个月返费
+                    span
+                      strong
+                        mark#management_fee_amount __
+                    span 元(共
+                    span#management_fee_amounts __
+                    span 元)，每个月的
+                    span
+                      strong
+                        mark#management_fee_day __
+                    span 号对名单，最晚
+                    span
+                      strong
+                        mark#management_fee_deadline __
+                    span 天后结算
 
-  .form-group
-    .row
-      .col-xs-4
-        = f.label :company_id
-    .row
-      .col-xs-4.company_select
-        = f.select :company_id, options_for_select(current_enterprise.companies.collect { |c| [c.name, c.id] }, @job.company_id),
-          { include_blank: true }, class: 'form-control'
-      .col-xs-2
-        = link_to t('.new_company'), new_zhao_company_path, remote: true, class: 'btn btn-primary form-control'
+    .recruitment_field
+      .form-group
+          .row
+            .col-md-9
+              .panel.panel-default
+                .panel-body
+                  .male_field
+                    = t('.recruitment_fee_male')
+                    = render partial: 'male_fee', locals: { f: f, gender: 'male' }
+                    = f.link_to_add :male_fees do
+                      span.glyphicon.glyphicon-plus aria-hidden="true"
 
-  .form-group
-    .row
-      .col-xs-4
-        = f.label :contact_id
-    .row
-      .col-xs-4.contact_select
-        = f.select :contact_id, options_for_select(current_enterprise.contacts.collect {|c| [c.name, c.id]}, @job.contact_id),
-          { include_blank: true }, class: 'form-control'
-      .col-xs-2
-        = link_to t('.new_contact'), new_zhao_contact_path, remote: true, class: 'btn btn-primary form-control'
+
+                  .female_field
+                    = t('.recruitment_fee_female')
+                    = render partial: 'female_fee', locals: { f: f, gender: 'female' }
+                    = f.link_to_add :female_fees do
+                      span.glyphicon.glyphicon-plus aria-hidden="true"
+                .panel-footer
+                  small
+                    span 123
 
   .form-group
     .row
       .col-xs-2
         = f.submit class: 'btn btn-primary form-control'
+      .col-xs-2
+        = link_to t('.back'), zhao_jobs_path, class: 'btn btn-danger form-control'
+
+- content_for :js
+  = javascript_include_tag "nested_form"
+  = javascript_include_tag "job"
